--- a/AdventOfCode2015.csproj
+++ b/AdventOfCode2015.csproj
@@ -13,6 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Days\Day15\Day15Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Days\Day14\Day14Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Days\Day13\Day13Input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
