--- a/AdventOfCode2015.csproj
+++ b/AdventOfCode2015.csproj
@@ -13,6 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Days\Day18\Day18Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Days\Day17\Day17Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Days\Day16\Day16Input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
