--- a/AdventOfCode2015.csproj
+++ b/AdventOfCode2015.csproj
@@ -13,6 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Days\Day19\Day19Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Days\Day18\Day18Input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
