At long last, day 20! And the rest.

--- a/AdventOfCode2015.csproj
+++ b/AdventOfCode2015.csproj
@@ -70,6 +70,12 @@
     <None Update="Days\Day01\Day1Input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Days\Day24\Day24Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Days\Day23\Day23Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
